# advent-of-code

./: README.md
2020/: README.md  adventofcode2020.cabal  stack.yaml
2020/day-06/: Day06.hs
2020/day-20/: Day20.hs
2020/day-25/: Day25.hs
2022/: .gitignore  adventofcode2022.cabal  cabal.project  flake.nix  stack.yaml
2022/src/help/: Common.hs
2022/src/main/: Day09.hs  Day12.hs  Day15.hs
2022/test/: Test12.hs  Test15.hs
2023/: .gitignore  Cargo.toml  crates.nix  flake.nix  rustfmt.toml
2024/: build.zig  build.zig.zon  flake.nix
2024/src/: day_01.zig  day_02.zig  day_03.zig  day_04.zig  day_05.zig  day_06.zig  day_07.zig  day_08.zig  day_09.zig  day_10.zig  main.zig  utils.zig
2025/: .gitignore  build.zig  build.zig.zon  flake.nix
2025/src/: all.zig  day_01.zig  day_02.zig  day_03.zig  day_04.zig  day_05.zig  day_06.zig  day_07.zig  day_08.zig  utils.zig
2025/txt/: day_03.txt
