[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
authors = ["Lawrence Bell"]

[dependencies]
array-init = "2.1.0"
gcollections = "1.5.0"
intervallum = "1.4.0"
itertools = "0.12.0"
nom = "7.1.3"
strum = "0.25.0"
strum_macros = "0.25.3"

[[bin]]
name = "day_01"

[[bin]]
name = "day_02"

[[bin]]
name = "day_03"

[[bin]]
name = "day_04"

[[bin]]
name = "day_05"

[[bin]]
name = "day_06"

[[bin]]
name = "day_07"

[[bin]]
name = "day_08"

[[bin]]
name = "day_09"

[[bin]]
name = "day_10"

[[bin]]
name = "day_15"

[[bin]]
name = "day_16"

[[bin]]
name = "day_19"
